[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/textures/Missile1.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/Explosion.png" type="Texture" id=2]
[ext_resource path="res://scripts/rocket.gd" type="Script" id=3]
[ext_resource path="res://scenes/fire.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.0
height = 8.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "explosion",
"speed": 14.0
} ]

[node name="Rocket" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="VisibleNotifier" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1.49012e-08, 1.78814e-07 )
rotation = -0.0063403
scale = Vector2( 0.786867, 0.569753 )

[node name="Explosion" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 10 )
animation = "explosion"

[node name="Reactor" type="Node2D" parent="."]

[node name="Fire" parent="Reactor" instance=ExtResource( 4 )]
position = Vector2( -6, 0 )
scale = Vector2( 0.4, 0.4 )

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleNotifier" to="." method="_on_screen_exited"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_explosion_animation_finished"]
